# pure-svg

./: default.nix  pure-svg.cabal
src/Pure/Data/: SVG.hs
src/Pure/Data/SVG/: Properties.hs
