name:                pure-svg
version:             0.8.0.0
homepage:            purehs.org/doc/pure-svg
license:             BSD3
license-file:        LICENSE
author:              Sean Hickman
maintainer:          sean@grumply.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type: git
  location: https://github.com/grumply/pure-svg.git

library
  build-depends:
    base,
    pure-core,
    pure-txt

  hs-source-dirs: src

  exposed-modules:
    Pure.Data.SVG
    Pure.Data.SVG.Properties

  default-language: Haskell2010
